--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,11 @@
         android:theme="@style/Theme.TurkeyMaps"
         tools:targetApi="31">
         <activity
-            android:name=".DetailsActivity"
+            android:name=".view.DetailsActivity"
             android:exported="false"
             android:theme="@style/Sec.Theme.TurkeyMaps" />
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
